Utilizando callBack no lugar das functions, Implementado rotina de inclusão com callback, implementado edição com callback, mensagem de confirmação de gravação/alteração na opção listagem, edição de objeto e retorno através do call back, utilização da hook history

--- a/src/components/Listagem/ListagemUsuario.css
+++ b/src/components/Listagem/ListagemUsuario.css
@@ -49,3 +49,14 @@ table tbody tr td {text-align: center;}
     padding-bottom: 5px;
     text-align: center;
 }
+
+.successMessage {
+    background-color: #224e09;
+    color: #fff;  
+    font-weight: bold;
+    font-size: 13px;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
