--- a/src/components/IncluirCadastro/FrmIncluirCadastro.css
+++ b/src/components/IncluirCadastro/FrmIncluirCadastro.css
@@ -1,10 +1,19 @@
 
-.container {
-  max-width: 400px;  
-  border: 2px solid #c0c0c0;
+.container_incluir {
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  width: 500px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 10px;
-  background-color: #f5f5f5;
+  background-color: #f5f5f5;  
+  display: block;
+  padding: 15px; 
+  border: solid 1px #000;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
+  margin-top: 50px;
 }
 
 form .row {
@@ -13,7 +22,7 @@ form .row {
   /* justify-content: center;
   align-items: center;
   justify-items: center;
-  align-content: center; */
+  align-content: center; */  
 }
 
 form h3 {
@@ -26,7 +35,7 @@ form .row span {
 
 form .row input {
   flex: 1;
-  height: 30px;
+  height: 35px;
   outline: none;  
   padding-left: 10px;
   font-size: 18px;
