Aprendemos a trabalhar com useContext, local onde podemos armazenar dados globais do usuário, é util para não ficar criando props nos componentes para passagem de informações

--- a/src/components/Header/FrmHeader.css
+++ b/src/components/Header/FrmHeader.css
@@ -20,3 +20,11 @@ nav a:hover {
     transition: ease-out;
     transition-duration: .3s;
 }
+
+nav span {
+    color: #fff;
+    display: block;
+    width: 100%; 
+    text-align: right;
+    padding-right: 50px;
+}
